--- a/admin.html
+++ b/admin.html
@@ -32,140 +32,141 @@
     <title>Naija Votes &mdash; Your Voice, Your Vote</title>
   </head>
   <body class="color-text">
-    <header class="main-header margin-bottom-5">
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li>
-            <a class="main-nav-link primary-color link-home" href="./index.html"
-              ><ion-icon name="laptop-outline" class="logo-icon"></ion-icon
-              >Naija Votes</a
-            >
-          </li>
-        </ul>
-
-        <div class="main-nav-links-box">
-          <ul class="main-nav-list">
-            <li>
-              <a class="main-nav-link link-vote primary-color" href="#">Vote</a>
-            </li>
-            <li><a class="main-nav-link color-text" href="#">Results</a></li>
-            <li>
-              <a class="main-nav-link color-text" href="#">How to Vote</a>
-            </li>
-            <li>
-              <a class="main-nav-link color-text" href="#">Verify Vote</a>
-            </li>
-          </ul>
-          <ul class="main-nav-list">
-            <li>
-              <a class="main-nav-link color-text link-login" href="./login.html"
-                >Login</a
-              >
-            </li>
-            <li>
-              <a
-                class="main-nav-link color-text link-register"
-                href="./register.html"
-                >Register</a
-              >
-            </li>
-            <li>
-              <a class="main-nav-link color-text link-admin" href="./admin.html"
-                >Admin</a
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <div class="admin-container">
-        <section>
-          <header class="admin-header margin-bottom-5">
-            <h1>Admin Dashboard</h1>
-            <p>Monitor and manage the voting process.</p>
-          </header>
-          <!-- Admin Actions Buttons -->
-          <div class="admin-actions margin-bottom-3">
-            <button class="btn btn-admin-action active btn-overview">
-              Overview
-            </button>
-            <button class="btn btn-admin-action btn-ai-audit">AI Audit</button>
-            <button class="btn btn-admin-action btn-feedback">Feedback</button>
+    <div class="wrapper">
+      <header class="main-header margin-bottom-5">
+        <a class="main-nav-link primary-color link-home" href="./index.html"
+          ><ion-icon name="laptop-outline" class="logo-icon"></ion-icon>Naija
+          Votes</a
+        >
+        <nav class="main-nav">
+          <div class="main-nav-links-box">
+            <ul class="main-nav-list">
+              <li>
+                <a
+                  class="main-nav-link link-vote primary-color"
+                  href="./index.html"
+                  >Vote</a
+                >
+              </li>
+              <li>
+                <a class="main-nav-link color-text" href="./results.html"
+                  >Results</a
+                >
+              </li>
+              <li>
+                <a class="main-nav-link color-text" href="./how-to-vote.html"
+                  >How to Vote</a
+                >
+              </li>
+              <li>
+                <a class="main-nav-link color-text" href="./verify-vote.html"
+                  >Verify Vote</a
+                >
+              </li>
+            </ul>
+            <ul class="main-nav-list">
+              <li>
+                <a
+                  class="main-nav-link color-text link-login"
+                  href="./login.html"
+                  >Login</a
+                >
+              </li>
+              <li>
+                <a
+                  class="main-nav-link color-text link-register"
+                  href="./register.html"
+                  >Register</a
+                >
+              </li>
+              <li>
+                <a
+                  class="main-nav-link color-text link-admin"
+                  href="./admin.html"
+                  >Admin</a
+                >
+              </li>
+            </ul>
           </div>
-        </section>
-        <section class="admin-content">
-          <div class="admin-overview">
-            <div class="overview-content flex-column">
-              <div class="overview-content-header flex-row">
-                <p class="color-dark">Total Votes</p>
-                <ion-icon name="analytics" class="overview-icon"></ion-icon>
-              </div>
-              <p class="overview-content-count color-dark">1,234</p>
-              <p>Total number of vote casts</p>
-            </div>
-
-            <div class="overview-content flex-column">
-              <div class="overview-content-header flex-row">
-                <p class="color-dark">Candidates</p>
-                <p><ion-icon name="people" class="overview-icon"></ion-icon></p>
-              </div>
-              <p class="overview-content-count color-dark">4</p>
-              <p>Number of candidates in the election.</p>
-            </div>
-
-            <div class="overview-content flex-column">
-              <div class="overview-content-header flex-row">
-                <p class="color-dark">Feedback Reports</p>
-                <p>
-                  <ion-icon name="chatbubbles" class="overview-icon"></ion-icon>
-                </p>
-              </div>
-              <p class="overview-content-count color-dark">0</p>
-              <p>Total user feedback submissions.</p>
-            </div>
-          </div>
-
-          <div class="admin-ai-audit">
-            <div class="audit-header flex-row">
-              <p class="audit-icon-p">
-                <i class="fa fa-shield audit-icon" aria-hidden="true"></i>
-              </p>
-              <div>
-                <h2 class="color-dark">Voting Pattern Audit</h2>
-                <p>
-                  Use our GenAI-powered tool to analyze the voting data for any
-                  unusual patterns that might indicate fraudulent activity.
-                </p>
-              </div>
-            </div>
-
-            <div>
-              <p>
-                Start a new analysis of the current voting data. This may take a
-                few moments.
-              </p>
-              <button type="button" class="btn btn-run-audit">
-                Run AI Audit
+        </nav>
+        <button class="btn-mobile-nav">
+          <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+          <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+        </button>
+      </header>
+      <main class="main-content">
+        <div class="admin-container">
+          <section>
+            <header class="admin-header margin-bottom-5">
+              <h1>Admin Dashboard</h1>
+              <p>Monitor and manage the voting process.</p>
+            </header>
+            <!-- Admin Actions Buttons -->
+            <div class="admin-actions margin-bottom-3">
+              <button class="btn btn-admin-action active btn-overview">
+                Overview
+              </button>
+              <button class="btn btn-admin-action btn-feedback">
+                Feedback
               </button>
             </div>
-            <!-- Add AI audit content here -->
-            <h3>Audit Results</h3>
-          </div>
-
-          <div class="admin-feedback">
-            <h2>Feedback</h2>
-            <p>View and manage user feedback.</p>
-            <!-- Add feedback content here -->
-          </div>
-        </section>
-      </div>
-    </main>
-
-    <footer class="main-footer">
-      <p>&copy; 2023 Naija Votes. All rights reserved.</p>
-      <p><a href="#" class="link report-link">Report an Issue / Feedback</a></p>
-    </footer>
+          </section>
+          <section class="admin-content">
+            <div class="admin-overview">
+              <div class="overview-content flex-column">
+                <div class="overview-content-header flex-row">
+                  <p class="color-dark">Total Votes</p>
+                  <ion-icon name="analytics" class="overview-icon"></ion-icon>
+                </div>
+                <p class="overview-content-count color-dark">1,234</p>
+                <p>Total number of vote casts</p>
+              </div>
+              <div class="overview-content flex-column">
+                <div class="overview-content-header flex-row">
+                  <p class="color-dark">Candidates</p>
+                  <p>
+                    <ion-icon name="people" class="overview-icon"></ion-icon>
+                  </p>
+                </div>
+                <p class="overview-content-count color-dark">4</p>
+                <p>Number of candidates in the election.</p>
+              </div>
+              <div class="overview-content flex-column">
+                <div class="overview-content-header flex-row">
+                  <p class="color-dark">Feedback Reports</p>
+                  <p>
+                    <ion-icon
+                      name="chatbubbles"
+                      class="overview-icon"
+                    ></ion-icon>
+                  </p>
+                </div>
+                <p class="overview-content-count color-dark">0</p>
+                <p>Total user feedback submissions.</p>
+              </div>
+            </div>
+            <div class="admin-feedback">
+              <header class="admin-feedback-header margin-bottom-5">
+                <h2 class="color-dark">User Feedback</h2>
+                <p class="small-text">List of submitted feedback and issues.</p>
+              </header>
+              <!-- Add feedback content here -->
+              <div class="admin-feedback-content">
+                <p class="color-text">No feedback has been submitted yet.</p>
+              </div>
+            </div>
+          </section>
+        </div>
+      </main>
+      <footer class="main-footer">
+        <p>&copy; 2023 Naija Votes. All rights reserved.</p>
+        <p>
+          <a href="./reports.html" class="link report-link"
+            >Report an Issue / Feedback</a
+          >
+        </p>
+      </footer>
+    </div>
     <script src="./js/script.js"></script>
   </body>
 </html>
