I fixed the Admin page Overview issue, switched from flex to grid

--- a/admin.html
+++ b/admin.html
@@ -112,7 +112,7 @@
             </div>
           </section>
           <section class="admin-content">
-            <div class="admin-overview">
+            <div class="admin-overview grid grid-cols-3">
               <div class="overview-content flex-column">
                 <div class="overview-content-header flex-row">
                   <p class="color-dark">Total Votes</p>
