--- a/admin.html
+++ b/admin.html
@@ -168,5 +168,6 @@
       </footer>
     </div>
     <script src="./js/script.js"></script>
+    <script src="./js/admin.js"></script>
   </body>
 </html>
