--- a/how-to-vote.html
+++ b/how-to-vote.html
@@ -338,6 +338,8 @@
         >
       </p>
     </footer>
+
+    <script src="./js/script.js"></script>
     <script src="./js/how-to-vote.js"></script>
   </body>
 </html>
