--- a/login.html
+++ b/login.html
@@ -37,11 +37,17 @@
           <div class="main-nav-links-box">
             <ul class="main-nav-list">
               <li>
-                <a class="main-nav-link link-vote primary-color" href="#"
+                <a
+                  class="main-nav-link link-vote primary-color"
+                  href="./index.html"
                   >Vote</a
                 >
               </li>
-              <li><a class="main-nav-link color-text" href="#">Results</a></li>
+              <li>
+                <a class="main-nav-link color-text" href="./results.html"
+                  >Results</a
+                >
+              </li>
               <li>
                 <a class="main-nav-link color-text" href="./how-to-vote.html"
                   >How to Vote</a
